# mpitest

./: CMakeLists.txt  README.md  bootstrap
code/: mpi.c  mpitest.cpp  mptest.cpp  simple.c  test2.c
support/: libfabric-1.4.2-5.fc27.x86_64.rpm
